# COGAR_assignment

./: README.md
create_scene/: CMakeLists.txt  package.xml
create_scene/launch/: create_scene.launch.py  create_scene_1.launch.py  create_scene_2.launch.py  scene_easy_bin.launch.py  scene_easy_nobin.launch.py  scene_hard_bin.launch.py  scene_hard_nobin.launch.py
create_scene/src/: scene_setup.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/create_scene/lib/create_scene/: scene
install/create_scene/share/create_scene/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/create_scene/share/create_scene/cmake/: create_sceneConfig-version.cmake  create_sceneConfig.cmake
install/create_scene/share/create_scene/environment/: ament_prefix_path.dsv  path.dsv
install/create_scene/share/create_scene/launch/: create_scene.launch.py
install/onrobot_2fg7_description/share/onrobot_2fg7_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/onrobot_2fg7_description/share/onrobot_2fg7_description/cmake/: onrobot_2fg7_descriptionConfig-version.cmake  onrobot_2fg7_descriptionConfig.cmake
install/onrobot_2fg7_description/share/onrobot_2fg7_description/config/: onrobot_2fg7_config.rviz
install/onrobot_2fg7_description/share/onrobot_2fg7_description/environment/: ament_prefix_path.dsv  path.dsv
install/onrobot_2fg7_description/share/onrobot_2fg7_description/launch/: rviz.launch.py
install/onrobot_2fg7_description/share/onrobot_2fg7_description/meshes/: base_link.stl  finger_link.stl
install/onrobot_2fg7_description/share/onrobot_2fg7_description/ros2_control/: onrobot_2fg7.ros2_control.xacro
install/onrobot_2fg7_description/share/onrobot_2fg7_description/urdf/: materials.xacro  onrobot_2fg7.urdf.xacro  onrobot_2fg7.xacro
install/ur5e_2fg7/share/ur5e_2fg7/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5e_2fg7/share/ur5e_2fg7/cmake/: ur5e_2fg7Config-version.cmake  ur5e_2fg7Config.cmake
install/ur5e_2fg7/share/ur5e_2fg7/config/: moveit_controllers.yaml  ros2_controllers.yaml  view_robot.rviz
install/ur5e_2fg7/share/ur5e_2fg7/environment/: ament_prefix_path.dsv  path.dsv
install/ur5e_2fg7/share/ur5e_2fg7/launch/: isaacsim_moveit.launch.py  view_robot.launch.py
install/ur5e_2fg7/share/ur5e_2fg7/urdf/: ur5e_2fg7.ros2_control.xacro  ur5e_2fg7_description_only.urdf.xacro  ur5e_2fg7_final.urdf  ur5e_2fg7_main.urdf  ur5e_2fg7_main.urdf.xacro
install/ur5e_2fg7_moveit_config/share/ur5e_2fg7_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5e_2fg7_moveit_config/share/ur5e_2fg7_moveit_config/cmake/: ur5e_2fg7_moveit_configConfig-version.cmake  ur5e_2fg7_moveit_configConfig.cmake
install/ur5e_2fg7_moveit_config/share/ur5e_2fg7_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  pilz_cartesian_limits.yaml  ros2_controllers.yaml  ur5e_con_2fg7.ros2_control.xacro  ur5e_con_2fg7.srdf  ur5e_con_2fg7.urdf.xacro
install/ur5e_2fg7_moveit_config/share/ur5e_2fg7_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/ur5e_2fg7_moveit_config/share/ur5e_2fg7_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_description/share/ur_description/cmake/: ur_descriptionConfig-version.cmake  ur_descriptionConfig.cmake
install/ur_description/share/ur_description/config/: initial_positions.yaml
install/ur_description/share/ur_description/environment/: ament_prefix_path.dsv  path.dsv
install/ur_description/share/ur_description/launch/: view_ur.launch.py
install/ur_description/share/ur_description/rviz/: view_robot.rviz
install/ur_description/share/ur_description/test/: test_ur_urdf_xacro.py  (+1 more)
log/: latest_build  latest_list
task_pick_and_place/: CMakeLists.txt  package.xml
task_pick_and_place/launch/: launch_task.launch.py
task_pick_and_place/src/: pick_and_place_task.cpp
tasks_demo/: CMakeLists.txt  package.xml
tasks_demo/launch/: test_pick.launch.py
tasks_demo/src/: pick.cpp  pick_place_demo.cpp
ur5e_2fg7/: CMakeLists.txt  package.xml
ur5e_2fg7/config/: moveit_controllers.yaml  ros2_controllers.yaml  view_robot.rviz
ur5e_2fg7/launch/: isaacsim_moveit.launch.py  view_robot.launch.py
ur5e_2fg7/urdf/: ur5e_2fg7.ros2_control.xacro  ur5e_2fg7_description_only.urdf.xacro  ur5e_2fg7_final.urdf  ur5e_2fg7_main.urdf  ur5e_2fg7_main.urdf.xacro
ur5e_2fg7_moveit_config/: .setup_assistant
ur5e_2fg7_moveit_config/config/: initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur5e_con_2fg7.ros2_control.xacro  ur5e_con_2fg7.srdf  ur5e_con_2fg7.urdf.xacro
ur5e_2fg7_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur5e_demo/: CMakeLists.txt  package.xml
ur5e_demo/launch/: sim_demo.launch.py
ur5e_demo/src/: motion_planner.cpp
(+41 files in other folders)
