<?xml version="1.0"?>
<package format="3">
  <name>task_pick_and_place</name>
  <version>0.0.0</version>
  <description>Task-level demos for the COGAR B1 assignment with UR5e and OnRobot 2FG7.</description>

  <maintainer email="luca@example.com">luca</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <depend>moveit_planning</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>